colcon_ws/log/build_2022-09-10_20-21-14/gatekeeper/stderr.log
In file included from /opt/ros/foxy/include/rclcpp/service.hpp:34,
                 from /opt/ros/foxy/include/rclcpp/callback_group.hpp:25,
                 from /opt/ros/foxy/include/rclcpp/any_executable.hpp:20,
                 from /opt/ros/foxy/include/rclcpp/memory_strategy.hpp:24,
                 from /opt/ros/foxy/include/rclcpp/memory_strategies.hpp:18,
                 from /opt/ros/foxy/include/rclcpp/executor_options.hpp:20,
                 from /opt/ros/foxy/include/rclcpp/executor.hpp:33,
                 from /opt/ros/foxy/include/rclcpp/executors/multi_threaded_executor.hpp:26,
                 from /opt/ros/foxy/include/rclcpp/executors.hpp:21,
                 from /opt/ros/foxy/include/rclcpp/rclcpp.hpp:146,
                 from /root/colcon_ws/src/gatekeeper/include/gatekeeper/gatekeeper.hpp:7,
                 from /root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:10:
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp: In member function ‘void gatekeeper::Gatekeeper::cloud_callback(sensor_msgs::msg::PointCloud2_<std::allocator<void> >::SharedPtr)’:
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:50:9: error: static assertion failed: First argument to logging macros must be an rclcpp::Logger
   50 |         RCLCPP_INFO("failed in transform %s to %s", m_worldFrameId.c_str(), msg->header.frame_id.c_str());
      |         ^~~~~~~~~~~
In file included from /opt/ros/foxy/include/rclcpp/client.hpp:40,
                 from /opt/ros/foxy/include/rclcpp/callback_group.hpp:23,
                 from /opt/ros/foxy/include/rclcpp/any_executable.hpp:20,
                 from /opt/ros/foxy/include/rclcpp/memory_strategy.hpp:24,
                 from /opt/ros/foxy/include/rclcpp/memory_strategies.hpp:18,
                 from /opt/ros/foxy/include/rclcpp/executor_options.hpp:20,
                 from /opt/ros/foxy/include/rclcpp/executor.hpp:33,
                 from /opt/ros/foxy/include/rclcpp/executors/multi_threaded_executor.hpp:26,
                 from /opt/ros/foxy/include/rclcpp/executors.hpp:21,
                 from /opt/ros/foxy/include/rclcpp/rclcpp.hpp:146,
                 from /root/colcon_ws/src/gatekeeper/include/gatekeeper/gatekeeper.hpp:7,
                 from /root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:10:
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:50:9: error: request for member ‘get_name’ in ‘"failed in transform %s to %s"’, which is of non-class type ‘const char [29]’
   50 |         RCLCPP_INFO("failed in transform %s to %s", m_worldFrameId.c_str(), msg->header.frame_id.c_str());
      |         ^~~~~~~~~~~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:50:9: error: request for member ‘get_name’ in ‘"failed in transform %s to %s"’, which is of non-class type ‘const char [29]’
   50 |         RCLCPP_INFO("failed in transform %s to %s", m_worldFrameId.c_str(), msg->header.frame_id.c_str());
      |         ^~~~~~~~~~~
make[2]: *** [CMakeFiles/gatekeeper.dir/build.make:63: CMakeFiles/gatekeeper.dir/src/gatekeeper.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:80: CMakeFiles/gatekeeper.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
